--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.8.1
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   firebase_auth: ^4.6.2
   firebase_core: ^2.13.1
+  firebase_storage: ^11.2.3
   flutter:
     sdk: flutter
   get: ^4.6.5
   google_sign_in: ^6.1.4
+  image_picker: ^0.8.9
   intl: ^0.18.1
+  path:
   provider: ^6.0.5
 
 dev_dependencies:
