--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   google_sign_in: ^6.1.4
   image_picker: ^0.8.9
   intl: ^0.18.1
-  path:
+  path: null
   provider: ^6.0.5
 
 dev_dependencies:
