--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,15 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   firebase_auth: ^4.6.2
   firebase_core: ^2.13.1
+  firebase_messaging:
   firebase_storage: ^11.2.3
   flutter:
     sdk: flutter
+  # geolocator: ^9.0.2
   get: ^4.6.5
+  # google_maps_flutter: null
   google_sign_in: ^6.1.4
+  http: null
   image_picker: ^0.8.9
   intl: ^0.18.1
   path: null
