--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,4 +71,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-analytics:19.0.1' // Add this line
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
 }
