--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   cloud_firestore: ^4.8.1
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
+  custom_date_range_picker: ^1.0.10
   firebase_auth: ^4.6.2
   firebase_core: ^2.13.1
   firebase_messaging: ^14.6.3
   firebase_storage: ^11.2.3
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^14.1.1
   get: ^4.6.5
   google_sign_in: ^6.1.4
   http: ^0.13.0
