--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^14.1.1
+  flutter_polyline_points: ^1.0.0
+  geolocator: ^9.0.2
   get: ^4.6.5
+  google_maps_flutter: ^2.3.1
   google_sign_in: ^6.1.4
   http: ^0.13.0
   image_picker: ^0.8.9
   intl: ^0.18.1
+  location: ^4.4.0
   path: ^1.8.3
+  permission_handler: ^10.3.0
   provider: ^6.0.5
 
 dev_dependencies:
