--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   http: ^0.13.0
   image_picker: ^0.8.9
   intl: ^0.18.1
+  loading_animation_widget: ^1.2.0+4
   location: ^4.4.0
+  map_launcher: ^2.5.0+1
   path: ^1.8.3
   permission_handler: ^10.3.0
   provider: ^6.0.5
