--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   path: ^1.8.3
   permission_handler: ^10.3.0
   provider: ^6.0.5
+  razorpay_flutter: ^1.3.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
