--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   flutter_local_notifications: ^14.1.1
   flutter_polyline_points: ^1.0.0
+  geocoding: ^2.1.0
   geolocator: ^9.0.2
   get: ^4.6.5
   google_maps_flutter: ^2.3.1
