--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^10.3.0
   provider: ^6.0.5
   razorpay_flutter: ^1.3.5
+  search_page: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
