--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore: ^4.8.1
+  collection: ^1.17.1
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   custom_date_range_picker: ^1.0.10
@@ -53,6 +54,7 @@ dependencies:
   map_launcher: ^2.5.0+1
   path: ^1.8.3
   permission_handler: ^10.3.0
+  popover: ^0.2.8+2
   provider: ^6.0.5
   razorpay_flutter: ^1.3.5
   search_page: ^2.3.0
@@ -84,6 +86,8 @@ flutter:
     - assets/Akhil.jpg
     - assets/icons8-google-30.png
     - assets/dp.png
+    - assets/favorited.png
+    - assets/non-favorite.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
