--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   provider: ^6.0.5
   razorpay_flutter: ^1.3.5
   search_page: ^2.3.0
+  timer_button_fork: ^4.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
