--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_dialog: ^3.1.0
   cloud_firestore: ^4.8.1
   collection: ^1.17.1
   cupertino_icons: ^1.0.2
@@ -51,6 +52,7 @@ dependencies:
   intl: ^0.18.1
   loading_animation_widget: ^1.2.0+4
   location: ^4.4.0
+  lottie: ^2.5.0
   map_launcher: ^2.5.0+1
   path: ^1.8.3
   permission_handler: ^10.3.0
@@ -89,6 +91,10 @@ flutter:
     - assets/dp.png
     - assets/favorited.png
     - assets/non-favorite.png
+    - assets/animation_lkgq12zp.json
+    - assets/animation_lkgtfp7w.json
+    - assets/animation_lkgtssru.json
+    - assets/animation Empty chats.json
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
